--- a/news-backend/package.json
+++ b/news-backend/package.json
@@ -4,10 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "nodemon",
     "dev": "nodemon index.js",
     "lint": "eslint .",
-    "start:prod": "NODE_ENV=production node index.js"
   },
   "keywords": [],
   "author": "",
