--- a/news-backend/package.json
+++ b/news-backend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon",
     "dev": "nodemon index.js",
-    "lint": "eslint .",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
