--- a/certain-news/package.json
+++ b/certain-news/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.8"
